--- a/app/views/baseline/runs/run-details.njk
+++ b/app/views/baseline/runs/run-details.njk
@@ -93,7 +93,7 @@
 
             <h2 class="govuk-heading-m">Next step</h2>
             <p class="govuk-body">Review and confirm the billing instructions from the results file.</p>
-            <div class="govuk-button-group"><a href="/paycal/final-june/confirm-billing-instructions" class="govuk-button show-continue" style="display: inline;">
+            <div class="govuk-button-group"><a href="../billing/billing-instructions" class="govuk-button show-continue" style="display: inline;">
                 Continue
               </a>
 
