--- a/app/assets/sass/_baseline.scss
+++ b/app/assets/sass/_baseline.scss
@@ -17689,6 +17689,17 @@ nav.secondary-nav {
     height: 32px;
   }
 
+  .govuk-checkboxes__input:disabled {
+    background-color: red;
+  }
+
+ .govuk-checkboxes__input:disabled + .govuk-checkboxes__label:before {
+    opacity:0;
+    cursor:not-allowed;
+    width: 100%;
+    height: 100%;
+  }
+
 
   .billing-table__header--organisation {
     width:230px;
@@ -17698,8 +17709,23 @@ nav.secondary-nav {
     width:140px;
   }
 
-  
 }
+
+button.govuk-button--outline {
+  margin-top: 20px;
+  color:#00703c;
+  background-color:#ffffff;
+  box-shadow: 0 2px 0;
+  margin-bottom: 0;
+  border:1px solid;
+
+}
+
+.govuk-button--warning.govuk-button--outline {
+    color:#d4351c
+  }
+
+
 
 
 
