--- a/app/views/baseline/billing/confirm-billing-instructions.njk
+++ b/app/views/baseline/billing/confirm-billing-instructions.njk
@@ -83,7 +83,7 @@
 
 </div>
     
-    <form action="/{{version}}/billing/confirm" method="post">
+    <form action="/{{version}}/billing/confirm-update-billing-instructions" method="post">
       <table class="govuk-table billing-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -104,8 +104,25 @@
         {% endfor %}
       </tbody>
       </table>
+      <div style="margin-top: 60px;">
+        <h2 class="govuk-heading-m">Update billing instructions</h2>
+        <div class="govuk-button-group">
+          
+          <button type="submit" class="govuk-button govuk-button--outline" data-module="govuk-button" name="update_action" value="accept">
+            Accept selection
+          </button>
 
-      <button class="govuk-button">Accept selection</button>
+          <button type="submit" class="govuk-button govuk-button--warning govuk-button--outline" data-module="govuk-button" name="update_action" value="reject">
+            Reject selection
+          </button>
+
+          <button type="button" class="govuk-button govuk-button--secondary" id="clear-selection-btn">
+            Clear selection
+          </button>
+
+          <a class="govuk-link" href="../paycal-dashboard">Return to dashboard</a>
+        </div>
+      </div>
     </form>
   </div>
 </div>
