--- a/app/views/baseline/billing/confirm-billing-instructions.njk
+++ b/app/views/baseline/billing/confirm-billing-instructions.njk
@@ -83,7 +83,7 @@
 
 </div>
     
-    <form action="/{{version}}/billing/confirm-update-billing-instructions" method="post">
+    <form action="/{{version}}/billing/confirm-update" method="post">
       <table class="govuk-table billing-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
