--- a/app/views/baseline/_includes/billing-instructions-filter.njk
+++ b/app/views/baseline/_includes/billing-instructions-filter.njk
@@ -77,9 +77,10 @@
           {% endfor %}
         </div>
       </fieldset>
-      <a href="/{{ version }}/billing/confirm-update" class="billing-filter-button govuk-button govuk-button--submit filter__clear govuk-!-margin-top-5">
-      Clear filters
+      <a href="#" class="billing-filter-button govuk-button govuk-button--submit filter__clear govuk-!-margin-top-5" data-filter-type="instruction" data-filter-value="">
+        Clear filters
       </a>
+     
     </form>
   </div>
 </div>
